--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -5,5 +5,11 @@
   <%= @trip.name %>
 </p>
 
+<p>
+  <strong>Tickets:</strong>
+  <%= render "tickets/index" %>
+</p>
+
 <%= link_to 'Edit', edit_trip_path(@trip) %> |
-<%= link_to 'Back', trips_path %>
+<%= link_to 'Back', trips_path %> |
+<%= link_to 'Add new ticket to this trip', new_trip_ticket_path(@trip) %>
